tests/snapshots/run_wpt_conformance__trtx_argMin_float32_4D_tensor__axis_0__options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "arg_min_max.https.any.js",
    "argMin float32 4D tensor, axis=0, options.keepDimensions=true",
    "trtx",
    Failed {
        msg: Some(
            "arg_min_max :: argMin float32 4D tensor, axis=0, options.keepDimensions=true: index 0: actual=1065353216 expected=1 tolerance=0\n  inputs: argMinInput: [3.8301241397857666, -24.986488342285156, 5.29998254776001, -48.54866027832031, 40.308868408203125, 60.184295654296875, -82.78385925292969, -96.50904083251952, 71.87028503417969, 38.86639404296875, -39.14372634887695, 31.444366455078125, -82.78385925292969, -96.50904083251952, -25.533889770507813, -16.14226531982422, 66.63677215576172, 82.51197814941406, -82.78385925292969, -96.50904083251952, 39.76872634887695, 42.1504020690918, 82.66864013671875, 85.45269012451172]\n  expected argMinOutput: [1, 1, 1, 0, 0, 0, 0, 0, 1, 0 ...] (len=12)\n  actual argMinOutput: [1065353216, 1065353216, 1065353216, 0, 0, 0, 0, 0, 1065353216, 0 ...] (len=12)\n  expected argMinOutput full nd:\n[1, 1, 1, 0, 0, 0, 0, 0, 1, 0, ...] (len=12, shape=[1, 1, 4, 3])\n  actual argMinOutput full nd:\n[1065353216, 1065353216, 1065353216, 0, 0, 0, 0, 0, 1065353216, 0, ...] (len=12, shape=[1, 1, 4, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    argMinInput: f32[2, 1, 4, 3];\n  }\n\n  nodes {\n    [argMinOutput] = argMin(argMinInput, keepDimensions=true, label=\"\", outputDataType=\"int32\");\n  }\n\n  outputs { argMinOutput; }\n}\n",
        ),
    },
)
